<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zhanghaochong.bottomnavigationbar.MainActivity">


    <Button
        android:text="@string/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uploadBtn"
        android:layout_below="@+id/accountImage"
        android:gravity="center"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="22dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/account"
        android:gravity="center"
        app:srcCompat="@drawable/ic_account"
        android:layout_marginTop="48dp"
        android:id="@+id/accountImage"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="150dp" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:gravity="center"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_below="@+id/uploadBtn"

        android:layout_marginTop="60dp" />

    <TextView
        android:text="@string/user_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignLeft="@+id/userName"
        android:layout_marginTop="50dp"
        android:layout_below="@id/userName"
        android:id="@+id/userPhone"
        tools:text="@string/user_phone" />

    <EditText
        android:text="@string/user_input"
        android:gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_email_input"
        android:layout_alignBaseline="@+id/userEmail"
        android:layout_toRightOf="@+id/accountImage"
        android:layout_alignTop="@+id/userPhone" />

    <TextView
        android:text="@string/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_below="@id/userPhone"
        android:layout_alignLeft="@+id/userPhone"
        android:id="@+id/userEmail" />

    <EditText
        android:text="@string/user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_phone_input"
        android:layout_toRightOf="@+id/accountImage"
        android:layout_alignBaseline="@+id/userPhone"
        android:gravity="top" />

    <EditText
        android:text="@string/user_input"
        android:gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_name_input"
        android:layout_alignBaseline="@+id/userName"
        android:layout_alignBottom="@+id/userName"
        android:layout_toRightOf="@+id/accountImage"/>


</RelativeLayout>
